--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -1,7 +1,10 @@
 {
 	"AppTitle": "ExpressMVC",
 	"views": {
-		"Profile": "Profile"
+		"Profile": "Profile",
+		"AssignedTasks": "Assigned Tasks",
+		"BelongedTeam": "The team you belong to"
+		
 	},
 	"models": {
 		"User": {
