--- a/config/locales/ja.json
+++ b/config/locales/ja.json
@@ -1,7 +1,9 @@
 {
 	"AppTitle": "ExpressMVC",
 	"views": {
-		"Profile": "プロフィール"
+		"Profile": "プロフィール",
+		"AssignedTasks": "アサインされているタスク",
+		"BelongedTeam": "所属しているチーム"
 	},
 	"models": {
 		"User": {
